# OnboardRepo

./: .env.example  README.md  mypy.ini  pyproject.toml  requirements-lock.txt  ruff.toml
.github/workflows/: ci.yml
docs/: gemini_limits.md
scripts/: parsing_test.py  test_chunker.py  test_gemini.py
src/onboardrepo/indexer/: chunker_code.py
src/onboardrepo/llm/: __init__.py
tests/: test_wf.py
tests/samples/: sample_b.py  sample_d.py
