[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "onboardrepo"
version = "0.1.0"
description = "Local-first code RAG pipeline for repository understanding."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
]

[tool.hatch.build.targets.wheel]
packages = ["src/onboardrepo"]
